flatpak: don't trip over null gerrors

notably happens currently when rebasing without a rebase target and
failing internal flatpak assertions causing a !correct return but not
setting localError

BUG: 487526
(cherry picked from commit 435a31c4a1491d1ab5264b223f30678524aced56)